--- a/css/style.css
+++ b/css/style.css
@@ -2012,7 +2012,7 @@ img {
     border: 1px solid rgb(0, 163, 255);
     display: flex;
     height: 0px;
-    margin-bottom: 48px;
+    margin-bottom: 12.5px;
     width: 100%;
 }
 
@@ -2756,6 +2756,11 @@ img {
         display: none;
     }
 
+    .diagrammaSection{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
     .hero2-title{
         font-size: 35px;
         max-width: 556px;
@@ -2777,7 +2782,7 @@ img {
     .apps-box{
         grid-template-columns: repeat(2, 1fr);
         justify-content: center;
-        height: 216px;
+        height: 321px;
         transition: all .3s;
         overflow: hidden;
         margin-bottom: 30px;
@@ -2786,6 +2791,11 @@ img {
     .all-apps{
         display: flex;
         cursor: pointer;
+    }
+
+    .faq{
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
 
     .faq-title{
@@ -2842,7 +2852,7 @@ img {
     }
 
     .design_container {
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
 
     .design_img_box {
@@ -3044,7 +3054,9 @@ img {
 
     .contact_us {
         font-size: 12px;
-        padding: 6px 18px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     .form_names {
