--- a/css/style.css
+++ b/css/style.css
@@ -2024,6 +2024,29 @@ img {
     width: 100%;
 }
 
+.dumaloq{
+    width: 50px;
+    height: 50px;
+    background-color: #ffffff34;
+    border-radius: 50%;
+    display: flex;
+    position: fixed;
+    bottom: 10px;
+    right: -100%;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    transition: all .3s;
+    padding: 10px;
+    transform: scale(1);
+    cursor: pointer;
+    opacity: .3;
+}
+
+.dumaloq:hover{
+    opacity: 1;
+}
+
 /* LAPTOP VERSION */
 @media(max-width: 1390px) {
 
